RESOLVED FIXED106105
Can't compile MathExtras.h using MinGW-w64
https://bugs.webkit.org/show_bug.cgi?id=106105
Summary Can't compile MathExtras.h using MinGW-w64
Jonathan Liu
Reported 2013-01-04 10:09:58 PST
r138705 caused MathExtras.h to fail to compile as wtf_pow need isfinite and isinf. isfinite and isinf is defined after wtf_pow with "using std::isfinite" and "using std::isinf".
Attachments
Patch (2.68 KB, patch)
2013-01-04 10:17 PST, Jonathan Liu
no flags
Jonathan Liu
Comment 1 2013-01-04 10:17:12 PST
WebKit Review Bot
Comment 2 2013-01-04 10:20:34 PST
Attachment 181323 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/Ma..." exit_code: 1 Source/WTF/wtf/MathExtras.h:351: wtf_pow is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3 2013-01-04 11:53:17 PST
Comment on attachment 181323 [details] Patch Attachment 181323 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15699223 New failing tests: inspector-protocol/debugger-terminate-dedicated-worker-while-paused.html
WebKit Review Bot
Comment 4 2013-01-05 12:04:08 PST
Comment on attachment 181323 [details] Patch Clearing flags on attachment: 181323 Committed r138894: <http://trac.webkit.org/changeset/138894>
WebKit Review Bot
Comment 5 2013-01-05 12:04:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.