Fix compilation of MathExtras.h with MinGW-w64 https://bugs.webkit.org/show_bug.cgi?id=106105

Patch by Jonathan Liu <net147@gmail.com> on 2013-01-05
Reviewed by Simon Hausmann.

The isfinite and isinf functions are required by wtf_pow but
not defined until after wtf_pow. Move wtf_pow to after
"using std::isfinite" and "using std::isinf" to fix compilation.

* wtf/MathExtras.h:
(wtf_pow):

Canonical link: https://commits.webkit.org/124364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138894 268f45cc-cd09-0410-ab3c-d52691b4dbfc